@@ -5,16 +5,13 @@ import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.gui.widget.ButtonWidget;
 import net.minecraft.client.gui.widget.TextFieldWidget;
 import net.minecraft.text.Text;
+import org.lwjgl.util.tinyfd.TinyFileDialogs;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Stream;
 
 /**
  * P4 - 导出 TXT 页面：填写保存路径和文件名，点击"导出.txt"执行导出。
@@ -28,7 +25,6 @@ public class ExportTxtScreen extends Screen {
     private TextFieldWidget nameField;
 
     private static final Path TXTS_DIR = Path.of("../txts");
-    private List<String> availableFolders = new ArrayList<>();
 
     // 弹窗尺寸
     private static final int POPUP_WIDTH = 260;
@@ -42,8 +38,6 @@ public class ExportTxtScreen extends Screen {
 
     @Override
     protected void init() {
-        scanAvailableFolders();
-
         int cx = this.width / 2;
         int cy = this.height / 2;
         int popLeft = cx - POPUP_WIDTH / 2;
@@ -54,12 +48,12 @@ public class ExportTxtScreen extends Screen {
 
         // 保存路径输入
         int pathY = popTop + 28;
-        this.addDrawableChild(ButtonWidget.builder(Text.literal("📁"), button -> cycleFolder())
+        this.addDrawableChild(ButtonWidget.builder(Text.literal("📁"), button -> openFolderChooser())
                 .dimensions(fieldLeft, pathY, 20, 18).build());
         pathField = new TextFieldWidget(this.textRenderer, fieldLeft + 22, pathY, fieldW - 22, 18, Text.literal("路径"));
         pathField.setText("");
         pathField.setPlaceholder(Text.literal("§7保存路径（留空=txts根目录）"));
-        pathField.setMaxLength(128);
+        pathField.setMaxLength(512);
         this.addDrawableChild(pathField);
 
         // 文件名输入
@@ -102,25 +96,22 @@ public class ExportTxtScreen extends Screen {
     private void doExportTxt() {
         String name = nameField.getText().trim();
         if (name.isEmpty()) name = "exported_blueprint";
-        String subPath = pathField.getText().trim();
+        String pathText = pathField.getText().trim();
 
         String blueprintText = SelectionAnalyzer.exportBlueprint(result, name);
 
-        // 确定保存目录
-        Path dir = Paths.get("txts");
-        if (!Files.isDirectory(dir)) {
-            dir = Paths.get("..").resolve("txts");
+        // 确定保存目录：如果用户通过文件夹选择器选了绝对路径就直接用，否则用默认 txts 目录
+        Path dir;
+        if (!pathText.isEmpty()) {
+            dir = Path.of(pathText);
+        } else {
+            dir = Paths.get("txts");
+            if (!Files.isDirectory(dir)) {
+                dir = Paths.get("..").resolve("txts");
+            }
         }
         if (!Files.isDirectory(dir)) {
             try { Files.createDirectories(dir); } catch (IOException ignored) {}
-        }
-
-        // 如果指定了子目录，追加到路径
-        if (!subPath.isEmpty()) {
-            dir = dir.resolve(subPath);
-            if (!Files.isDirectory(dir)) {
-                try { Files.createDirectories(dir); } catch (IOException ignored) {}
-            }
         }
 
         String fileName = name.replaceAll("[^a-zA-Z0-9_\\-]", "_") + ".txt";
@@ -141,24 +132,20 @@ public class ExportTxtScreen extends Screen {
         close();
     }
 
-    private void scanAvailableFolders() {
-        availableFolders.clear();
-        availableFolders.add("");
-        Path dir = TXTS_DIR;
-        if (!Files.isDirectory(dir)) return;
-        try (Stream<Path> walk = Files.walk(dir)) {
-            walk.filter(Files::isDirectory)
-                .filter(p -> !p.equals(dir))
-                .forEach(p -> availableFolders.add(dir.relativize(p).toString().replace('\\', '/')));
-        } catch (IOException ignored) {}
-        Collections.sort(availableFolders);
-    }
-
-    private void cycleFolder() {
-        String current = pathField.getText().trim();
-        int idx = availableFolders.indexOf(current);
-        int next = (idx + 1) % availableFolders.size();
-        pathField.setText(availableFolders.get(next));
+    /**
+     * 打开原生文件夹选择对话框，选中后将路径填入 pathField。
+     */
+    private void openFolderChooser() {
+        // 默认打开 txts 目录
+        Path defaultDir = TXTS_DIR.toAbsolutePath().normalize();
+        if (!Files.isDirectory(defaultDir)) {
+            defaultDir = Path.of(System.getProperty("user.home"));
+        }
+        String selected = TinyFileDialogs.tinyfd_selectFolderDialog(
+                "选择保存文件夹", defaultDir.toString());
+        if (selected != null) {
+            pathField.setText(selected);
+        }
     }
 
     @Override
